# gm-bench

./: .gitignore  .semgrep.yml  AGENTS.md  LICENSE  README.md  REINTEGRATION.md  pyproject.toml
.github/: dependabot.yml
config/: openrouter_pricing_snapshot.json  output_budget_sweep.json  publication_protocol.json  sota_v2_lane.json  sota_v2_models.json  sota_v2_smoke_manifest.json
data/: gm_bench.sqlite
docs/: PUBLISH_READINESS.md  REPRODUCING_SOTA_V2_RELEASE.md  api_provider_lanes.md  benchmark_spec.md  output_budget_sweep.md  production_benchmark.md  scoring_calibration.md  submitting_results.md
examples/: anthropic_agent.py  benchmark.smoke.json  benchmark.standard.json  claude_agent.py  codex_agent.py  conformance_agent.py  cursor_agent.py  external_agent.py  gemini_agent.py  gm_agent_common.py  ollama_agent.py  openai_compatible_agent.py  opencode_agent.py  openrouter.luna.leaderboard.json  openrouter.luna.smoke.json  openrouter.smoke.json  openrouter_agent.py
gm_bench/: __init__.py  __main__.py  agent_utils.py  agents.py  baseline_cache.py  benchmark_config.py  calibration.py  cli.py  contract.py  environment.py  generator.py  gui.py  model_runs.py  models.py  official.py  oracle.py  pricing.json  protocol.py  providers.py  publication.py  runner.py  scoring.py  session.py  simulator.py  storage.py  telemetry.py  validity.py
results/: benchmark_results.md
schemas/: README.md  gm_action_list.schema.json  gm_actions.schema.json  gm_observation.schema.json
scripts/: analyze_output_budget.py  analyze_publication_panel.py  estimate_publication_cost.py  (+9 more)
(+119 files in other folders)
