[project]
name = "gm-bench"
version = "0.1.0"
description = "A minimal sports general-manager benchmark for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GM-Bench Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gm-bench = "gm_bench.cli:main"
gm-bench-gui = "gm_bench.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
