[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gm-bench"
version = "0.1.0"
description = "A minimal sports general-manager benchmark for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GM-Bench Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4.0", "ruff>=0.8"]

[project.scripts]
gm-bench = "gm_bench.cli:main"
gm-bench-gui = "gm_bench.gui:main"

[tool.setuptools.packages.find]
include = ["gm_bench*"]

[tool.setuptools.package-data]
gm_bench = ["gui_static/*", "pricing.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
